[project]
name = "PM-ex1-programs"
version = "1.0.0"
description = "Python project Exercise 01"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1.0"
requests = ">=2.31.0"
matplotlib = ">=3.7.2"
numpy = ">=2.4.4"
